--- a/Episode - 05 Let's get Hooked/Files/src/App.css
+++ b/Episode - 05 Let's get Hooked/Files/src/App.css
@@ -42,15 +42,6 @@
   padding: 10px;
 }
 
-/* .search input:focus {
-  outline: 0;
-}
-
-.search button {
-  padding: 10px 15px;
-  cursor: pointer;
-} */
-
 .res-container {
   display: flex;
   flex-wrap: wrap;
@@ -73,4 +64,9 @@
 
 .res-img {
   width: 100%;
+}
+
+.filter-btn{
+  margin: 10px;
+  cursor: pointer;
 }
