--- a/Episode - 06 Exploring the world/Coding/src/App.css
+++ b/Episode - 06 Exploring the world/Coding/src/App.css
@@ -70,3 +70,20 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.shimmer-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 15px;
+  gap: 10px;
+}
+
+.shimmer-card{
+  width: 200px;
+  height: 300px;
+  margin: 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #f0f0f0;
+  animation: shimmer 1s infinite;
+}
